Feature: コンテナ起動時にENTRYPOINTから処理実行、コンテナの破棄を行うよう調整
・処理を行うときだけコンテナが作成されるようになった
・ソースを編集する際はVScodeのdevcontainerの拡張機能を利用する

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,16 @@
 {
   "name": "Python IO",
-  // docker-composeでイメージ・コンテナを作成
-  "dockerFile": "../docker-compose.yml",
+  // Dockerfileでイメージ・コンテナを作成
+  "dockerFile": "../Dockerfile",
   // リモート先のVS Codeにインストールする拡張機能
   "extensions": [
+    // Python系
     "ms-python.python",
-    "njpwerner.autodocstring"
+    "ms-python.vscode-pylance",
+    "kevinrose.vsc-python-indent",
+    "dongli.python-preview",
+    "njpwerner.autodocstring",
+    // その他Util
+    "nemesv.copy-file-name"
   ],
 }
